# devperf

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: build-and-tests.yml  build.yml
old-src/: main.rs
old-src/modules/: config.rs  http_client.rs  mod.rs
old-src/modules/github/: client.rs  compare.rs  deployment.rs  repo.rs
old-src/modules/metric/: metrics.rs  mod.rs  with_github_deployments.rs
old-src/modules/types/: mod.rs
src/: cli.rs  common_types.rs  github.rs  main.rs  project_creating.rs
src/apps/cli/: config.rs  four_keys.rs  mod.rs  project.rs  sub_commands.rs
src/cli/: config.rs  four_keys.rs  initializer.rs  sub_commands.rs
src/cli/initializer/: config.rs  github_deployment.rs  heroku_release.rs  init.rs  mod.rs
src/common_types/: commit.rs  daily_items.rs  date_time_range.rs  deploy_branch_name.rs  deployment_source.rs  developer_count.rs  github_deployment_environment.rs  github_owner_repo.rs  github_personal_token.rs  heroku_app_name.rs  heroku_auth_token.rs  mod.rs  monthly_items.rs  validate_github_owner_repo_schema.rs  validate_github_personal_token_workflow.rs  validate_heroku_app_name_workflow.rs  validate_working_days_per_week_workflow.rs  weekly_items.rs  working_days_per_week.rs
src/config/: schema.rs
src/dependencies/: github_api.rs  github_api_client.rs  mod.rs  settings_toml.rs
src/dependencies/deployments_fetcher/: github_deployment.rs  github_deployment_graphql.rs  github_deployment_impl.rs  github_deployment_types.rs  github_merged_pull_graphql.rs  github_merged_pull_impl.rs  github_merged_pull_types.rs  heroku_release.rs  heroku_release_api_response.rs  heroku_release_impl.rs  heroku_release_types.rs  interface.rs  mock.rs  mod.rs  shared.rs
src/dependencies/fetch_deployments/: get_initial_commit_item.rs  github_deployment.rs  heroku_release.rs  interface.rs  mod.rs
src/dependencies/first_commit_getter/: github.rs  interface.rs  mock.rs
src/dependencies/get_first_commit_from_compare/: github.rs  mod.rs  (+1 more)
src/github/: deployment.rs  mod.rs
src/logger/: config.rs
src/metrics_retrieving/: dto.rs  mod.rs  public_schema.rs  retrieve_four_keys__dao.rs  retrieve_four_keys__impl.rs  retrieve_four_keys__schema.rs  retrieve_four_keys_impl.rs  retrieve_four_keys_implementation.rs  retrieve_four_keys_internal_tests.rs  retrieve_four_keys_internal_types.rs  retrieve_four_keys_public_tests.rs  retrieve_four_keys_public_types.rs  retrieve_four_keys_schema.rs  retrieve_four_keys_tests.rs  retrieve_four_keys_workflow.rs
src/modules/: config.rs  mod.rs
src/profiling/: heap_profiling.rs  mod.rs
src/project_creating/: create_github_deployment_project_dto.rs  create_github_deployment_project_schema.rs  create_github_deployment_project_workflow.rs  create_heroku_release_project_dto.rs  create_heroku_release_project_schema.rs  create_heroku_release_project_workflow.rs  create_project_implementation.rs  create_project_internal_types.rs  create_project_public_types.rs  dto.rs  mod.rs  public_schema.rs  schema.rs
src/project_parameter_validating/: mod.rs  validate_developer_count_schema.rs  validate_developer_count_workflow.rs  validate_github_owner_repo_schema.rs  validate_github_owner_repo_workflow.rs  validate_heroku_auth_token_schema.rs  validate_heroku_auth_token_workflow.rs  validate_working_days_per_week_schema.rs  validate_working_days_per_week_workflow.rs
src/shared/: datetime_utc.rs  median.rs  mod.rs  non_empty_vec.rs
src/test/: profiling.rs
src/tests/: mod.rs
(+86 files in other folders)
