[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.24"
clap = { version = "4.0.29", features = ["derive"] }
confy = "0.5.1"
env_logger = "0.10.0"
inquire = "0.6.1"
log = "0.4.17"
octocrab = "0.19.0"
reqwest = { version = "0.11.16", features = ["json"] }
rpassword = "7.2.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
