[package]
name = "devops-metrics-tools"
version = "0.0.11"
edition = "2021"
description = "A collection of tools for collecting and reporting on DevOps metrics"
license = "MIT"
repository = "https://github.com/shwld/devops-metrics-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = "1.12.0"
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "4.0.29", features = ["derive"] }
confy = "0.5.1"
env_logger = "0.10.0"
futures = "0.3.28"
http-cache-reqwest = "0.9.0"
inquire = "0.6.1"
itertools = "0.10.5"
log = "0.4.17"
octocrab = "0.19.0"
pin-project = "1.1.0"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["json"] }
reqwest-middleware = "0.2.1"
rpassword = "7.2.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
wildmatch = "2.1.1"

[dev-dependencies]
dhat = "0.3.2"
insta = "1.29.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
